--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
   <title>U wallet - الصفحة الرئيسية</title>
   <meta content="U Wallet Jo" property="og:title" />
   <meta content="محفظة U Wallet Jo" property="og:description" />
-  <meta content="https://www2.0zz0.com/2025/03/16/10/540589214.png" property="og:image" />
+  <meta content="https://up6.cc/2025/03/174291353770791.jpeg" property="og:image" />
   <meta content="U Wallet Jo" property="twitter:title" />
-  <meta content="محفظة U Wallet Jo" property="twitter:description" />
-  <meta content="https://www2.0zz0.com/2025/03/16/10/540589214.png" property="twitter:image" />
-  <meta property="og:type" content="website" />
+ <meta property="og:type" content="website" />
   <meta content="summary_large_image" name="twitter:card" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="https://cdn.prod.website-files.com/6709b4ecad0f1ceeeed96305/css/orangemonney.webflow.4d36521a0.css" rel="stylesheet" type="text/css" />
@@ -133,7 +131,7 @@
     </style>
 </head>
 <body>
-    <img src="https://www2.0zz0.com/2025/03/19/22/120444760.jpg" alt="Top Image" class="top-image">
+    <img src="https://up6.cc/2025/03/174291353770791.jpeg" alt="Top Image" class="top-image">
     <div class="content">
 
 </body>
